# shiny

./: .env.example  LICENSE  README.md  docker-compose.yml  shiny-start.sh  shiny-stop.sh
.github/: workflow-template.yaml
.github/workflows/: copilot-api-ci.yaml  identity-ci.yaml  shiny-gateway-ci.yaml  shiny-ui-ci.yaml
copilot-api/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  settings.py
copilot-api/constants/: app_constant.py  http_status_constant.py
copilot-api/core/: security.py
copilot-api/routers/: authentication.py  health_check.py
docker/postgres/: Dockerfile  postgres_init.sql  postgresql.conf.sample
identity/: Dockerfile
identity/identity-webhook/: pom.xml
identity/themes/: README.md
identity/themes/shiny/theme/shiny/login/: login.ftl  register.ftl  template.ftl  theme.properties
nginx/templates/: default.conf.template
shiny-gateway/: Dockerfile  module.d.ts  package-lock.json  package.json
shiny-gateway/src/: app.controller.spec.ts  app.module.ts  app.service.ts  main.ts
shiny-gateway/src/modules/database/: database.module.ts
shiny-gateway/src/modules/users/: user.controller.ts  user.service.ts
shiny-gateway/src/modules/users/dto/: user.dto.ts
shiny-gateway/src/modules/users/entities/: user.entity.ts
shiny-gateway/src/modules/webhook/: webhook.controller.ts  webhook.module.ts
shiny-gateway/src/modules/webhook/identity/: identity.controller.ts
shiny-gateway/src/modules/webhook/identity/dto/: identity.dto.ts
shiny-ui/: Dockerfile  package-lock.json  package.json
(+4 files in other folders)
